--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: #130c38;
 }
 .menu .menuTitle {
   font-family: cursive;
