--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -10,6 +10,7 @@
 .menu .menuTitle {
   font-family: cursive;
   font-size: 60px;
+  color: white;
 }
 
 .menuList {
@@ -28,6 +29,7 @@
   height: 350px;
   margin: 20px;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  color: white;
 }
 .menuItem:hover {
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
